<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal">
    <TableLayout android:id="@+id/tableLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:stretchColumns="1">
        <TableRow android:layout_width="wrap_content" android:id="@+id/tableRow1" android:layout_margin="0dip" android:layout_height="wrap_content">
            <ToggleButton android:layout_weight="1" android:layout_width="0dip" android:layout_height="wrap_content" android:text="@string/forward_left" android:textOff="@string/forward_left" android:textOn="@string/forward_left" android:id="@+id/toggleButtonForwardLeft"></ToggleButton>
	        <ToggleButton android:layout_weight="1" android:layout_width="0dip" android:id="@+id/toggleButtonForward" android:textOn="@string/forward" android:textOff="@string/forward" android:text="@string/forward" android:layout_height="wrap_content"></ToggleButton>
            <ToggleButton android:layout_weight="1" android:layout_width="0dip" android:layout_height="wrap_content" android:text="@string/forward_right" android:textOff="@string/forward_right" android:textOn="@string/forward_right" android:id="@+id/toggleButtonForwardRight"></ToggleButton>
        </TableRow>
        <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tableRow2">
            <ToggleButton android:layout_weight="1" android:text="@string/left_side" android:layout_height="wrap_content" android:layout_width="0dip" android:textOn="@string/left_side" android:textOff="@string/left_side" android:id="@+id/toggleButtonLeftSide"></ToggleButton>
            <ToggleButton android:layout_weight="1" android:layout_width="0dip" android:layout_height="wrap_content" android:text="@string/neutral" android:textOff="@string/neutral" android:textOn="@string/neutral" android:id="@+id/toggleButtonNeutral"></ToggleButton>
            <ToggleButton android:layout_weight="1" android:layout_width="0dip" android:layout_height="wrap_content" android:text="@string/right_side" android:textOff="@string/right_side" android:textOn="@string/right_side" android:id="@+id/toggleButtonRightSide"></ToggleButton>
        </TableRow>
        <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content">
       	 <ToggleButton android:layout_weight="1" android:text="@string/backward_left" android:layout_width="0dip" android:layout_height="wrap_content" android:textOff="@string/backward_left" android:textOn="@string/backward_left" android:id="@+id/toggleButtonBackwardLeft"></ToggleButton>
       	 <ToggleButton android:layout_weight="1" android:text="@string/backward" android:layout_width="0dip" android:layout_height="wrap_content" android:textOff="@string/backward" android:textOn="@string/backward" android:id="@+id/toggleButtonBackward"></ToggleButton>
       	 <ToggleButton android:layout_weight="1" android:text="@string/backward_right" android:layout_width="0dip" android:layout_height="wrap_content" android:textOff="@string/backward_right" android:textOn="@string/backward_right" android:id="@+id/toggleButtonBackwardRight"></ToggleButton>
        </TableRow>
        <TableRow android:layout_height="wrap_content" android:id="@+id/tableRow3" android:layout_width="wrap_content">
	        <TextView android:text="TextView" android:id="@+id/textViewIp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="left"></TextView>
	        <TextView android:layout_width="wrap_content" android:id="@+id/textViewMessages" android:text="TextView" android:layout_height="wrap_content" android:layout_gravity="right"></TextView>
        </TableRow>
        <TextView android:layout_width="wrap_content" android:id="@+id/textViewState" android:text="TextView" android:layout_height="wrap_content"></TextView>
    </TableLayout>
</LinearLayout>
